--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <script src="/dist/main.js"></script>
+    <h1>Click here for free Robux!!!1!!!!1111!!1</h1>
 </body>
 </html>
