--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,9 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Click here for free Robux!!!1!!!!1111!!1</h1>
+    <h1>Click <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ&list=RDdQw4w9WgXcQ&start_radio=1">HERE</a> for free ROBUX!!!1!!!!1111!!1</h1>
+    <button type="button" class="btn btn-primary">Click click click</button>
+    <img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Ftse3.mm.bing.net%2Fth%2Fid%2FOIP.ZgoV3t2DiXZMYgSWfc4LrgHaEK%3Fpid%3DApi&f=1&ipt=d113a5590576243ef14e761dab9e3fff6fb0e6fffbf9ee878543c731661b9240&ipo=images">
+    <img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Ftse1.mm.bing.net%2Fth%2Fid%2FOIP.vx79p1vKwd-kYCT_1pRExwHaIR%3Fpid%3DApi&f=1&ipt=ddc4c18c8c9e2038daa884a2dd38d9bf437850930aad07d676ed928d6533ea91&ipo=images">
 </body>
 </html>
