--- a/src/index.html
+++ b/src/index.html
@@ -17,13 +17,14 @@
                 <button id ="add-btn" class="button is-info">Add item</button>
             </div>
         </div>
-        <div class="content"></div>
-        <h1 id="title">dgdgdg</h1>
+        <div class="content">
+        <h1 id="title">Title</h1>
         <ul id="shopping-list">
             <li>Piim</li>
             <li>Sai</li>
             <li>Viin</li>
         </ul>
+        </div>
     </div>
 </body>
 </html>
