--- a/src/index.html
+++ b/src/index.html
@@ -1,30 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-
 <body>
-    <div class="container mt-3">
-        <div class="field has-addons">
-            <div class="control">
-                <input id="new-item" class="input" type="text" placeholder="Add item">
-            </div>
-            <div class="control">
-                <button id ="add-btn" class="button is-info">Add item</button>
-            </div>
-        </div>
-        <div class="content">
-        <h1 id="title">Title</h1>
-        <ul id="shopping-list">
-            <li>Piim</li>
-            <li>Sai</li>
-            <li>Viin</li>
-        </ul>
-        </div>
-    </div>
+    <div id="app"></div>
 </body>
 </html>
